# project-blockchain-microgrid-pspslab

./: .gitignore  BLOCKCHAIN_MECHANICS.md  EXPLANATION_COMPREHENSIVE.md  PROJECT_EXPLANATION.md  README.md  run_simulation.ps1
contracts/: hardhat.config.js  package-lock.json  package.json
contracts/contracts/: FrequencyConsensus.sol
contracts/scripts/: deploy.js
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx  contractConfig.js  index.css
frontend/src/components/: AttackPanel.css  AttackPanel.jsx  BlockchainHistory.css  BlockchainHistory.jsx  FrequencyChart.css  FrequencyChart.jsx  NodeCard.css  NodeCard.jsx  TransactionLifecycle.css  TransactionLifecycle.jsx
simulation/: CMakeLists.txt  main.cpp  microgrid.dss  opendss_engine.py  package-lock.json  package.json  simulate.js
